--- a/dockertest/pom.xml
+++ b/dockertest/pom.xml
@@ -42,7 +42,7 @@
           <version>6.11</version>
         </dependency>
   </dependencies>
-  <build>
+  <!-- <build>
   <plugins>
         <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
@@ -85,5 +85,5 @@
 		    </configuration>
 		</plugin>
      </plugins>
-   </build>
+   </build> -->
 </project>
